qmd & htmlfrom working project with vyavahara

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,7 @@ book:
   chapters:
     - index.qmd
     - prajJapti.qmd
+    - prapaJca.qmd
     - vitarka.qmd
     - vyavahAra.qmd
     - bibliography.qmd
