--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,10 @@ book:
   chapters:
     - index.qmd
     - citta.qmd
+    - dravya.qmd
     - ghoSa.qmd
     - prajJapti.qmd
+    - saMkalpa.qmd
     - vitarka.qmd
     - vastu.qmd
     - vyavahAra.qmd
