--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ book:
   image: SynchordLanguage.png
   chapters:
     - index.qmd
+    - anuzaya.qmd
     - citta.qmd
     - dharma.qmd
     - dhAtu.qmd
